fix(core): proper error message for invalid input
relate to #3752